--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,6 @@
 
 input {
   padding: 0.5em 1em;
-  padding-left: 1.5em;
 }
 
 input::placeholder {
@@ -27,14 +26,14 @@ input::placeholder {
   }
 
   .semi-height {
-    max-height: 70vh;
+    max-height: 60vh;
   }
 
   .main-gallery {
     @apply input-gallery-border w-1/2 flex flex-col overflow-hidden semi-height;
   }
 
-  .ingredient-card-shadow {
+  .card-shadow {
     box-shadow: 0px 3px 3px -2px rgba(0, 0, 0, 0.2), 0px 3px 4px 0px rgba(0, 0, 0, 0.14),
       0px 1px 8px 0px rgba(0, 0, 0, 0.12);
   }
