--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,22 @@ input::placeholder {
 }
 
 @layer components {
+  :root {
+    --fluid-16-40: clamp(1rem, -1.2722rem + 3.5503vi, 2.5rem);
+    --fluid-16-24: clamp(1rem, 0.2426rem + 1.1834vi, 1.5rem);
+  }
+
+  .grid-autofill {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(8rem, 1fr));
+    grid-auto-columns: auto;
+  }
+
+  .grid-few {
+    display: flex;
+    flex-direction: row;
+  }
+
   .center {
     @apply items-center justify-center;
   }
@@ -30,12 +46,16 @@ input::placeholder {
   }
 
   .main-gallery {
-    @apply input-gallery-border w-1/2 flex flex-col overflow-hidden semi-height;
+    @apply input-gallery-border flex flex-col overflow-hidden semi-height;
   }
 
   .card-shadow {
     box-shadow: 0px 3px 3px -2px rgba(0, 0, 0, 0.2), 0px 3px 4px 0px rgba(0, 0, 0, 0.14),
       0px 1px 8px 0px rgba(0, 0, 0, 0.12);
+  }
+
+  .suspense-gallery-item {
+    @apply relative flex flex-col rounded-2xl card-shadow md:w-20 lg:w-28 xl:w-32 aspect-video-reverse bg-slate-100;
   }
 
   .aspect-video-reverse {
