feat: warning colors on invalid page next

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,11 @@
 @tailwind components;
 @tailwind utilities;
 
+body,
+html {
+  box-sizing: border-box;
+}
+
 input {
   padding: 0.5em 1em;
 }
@@ -75,6 +80,16 @@ input::placeholder {
 
   .toast {
     animation: fadeIn 1s ease-in-out;
+  }
+
+  .required-element-border {
+    border-width: 1px;
+    border-style: solid;
+    border-color: red;
+  }
+
+  .required-element-fill {
+    background-color: rgba(255, 0, 0, 0.2);
   }
 }
 
