--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,42 @@ input::placeholder {
     max-height: 20ch;
   }
 
+  .modal-open-button {
+    @apply absolute z-10 top-0 left-0 m-24 font-shadow-light text-2xl -rotate-12 text-center hover:-rotate-0 hover:scale-110 transition ease-in-out;
+  }
+
+  .modal-container {
+    @apply absolute top-0 left-0 w-full h-full flex flex-col center p-4 transition ease-in-out;
+  }
+
+  .modal-content {
+    @apply relative flex flex-col center w-1/3 mt-20 aspect-square rounded-2xl bg-white;
+  }
+
+  .modal-image {
+    @apply h-full rounded-2xl;
+  }
+
+  .modal-image-title {
+    @apply absolute top-0 text-2xl font-indie mt-2;
+  }
+
+  .close-modal-button {
+    @apply absolute top-0 right-0 center m-4 hover:scale-125 text-center transition ease-in-out;
+  }
+
+  .modal-nav-buttons {
+    @apply absolute bottom-0 flex w-full justify-between p-4 pb-4;
+  }
+
+  .nav-button {
+    @apply hover:scale-125 transition ease-in-out;
+  }
+
+  .modal-overlay {
+    @apply fixed inset-0 bg-gray-500 bg-opacity-80 border-none;
+  }
+
   .instruction-word {
     @apply font-indie text-xl mx-4;
   }
