feat: social icons

--- a/src/index.css
+++ b/src/index.css
@@ -81,7 +81,7 @@
   }
 
   .modal-content {
-    @apply relative flex flex-col center w-1/2 md:m-12 lg:m-16 xl:mt-20 aspect-square rounded-2xl bg-white;
+    @apply relative flex flex-col center md:w-1/2 lg:w-2/5 md:m-12 lg:m-16 xl:mt-20 aspect-square rounded-2xl bg-white;
   }
 
   .modal-image {
